# guiosoft-scripts

./: .gitignore  LICENSE  README.md  download_vscode.py  install.sh  install_golang.sh  install_vscode.sh  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/scripts/: check_versions.sh
.github/workflows/: codeql-analysis.yml  mkdocs.yml  new_release.yml  package-versions.yml  shell.yml  shell_scripts_tests.yml  software-versions.yml
src/: assistant.sh  colors.sh  tools.sh  version.sh
src/versions/: check_versions.py  markdown_parser.py  models.py
src/versions/fetchers/: __init__.py  fetcher.py  fetcher_dbeaver.py  fetcher_golang.py  fetcher_vscode.py  regex.py  request.py
terminal_setup/: .tmux.conf  README.md  alacritty.toml  starship.toml  terminal_setup.sh
tests/: test_version.sh
tests/versions/: test_markdown_parser.py
tmp/: version.sh  vscode.json
